# zomeki

./: .gitignore  .travis.yml  COPYING  Gemfile  README  README.rdoc  Rakefile  config.ru
app/controllers/: application_controller.rb  exception_controller.rb  simple_captcha_controller.rb
app/helpers/: application_helper.rb  doc_helper.rb  form_helper.rb  link_helper.rb
app/mailers/: common_mailer.rb  default_mailer.rb
config/: application.rb  application.yml  core.yml.sample  database.yml  database.yml.travis  environment.rb  holiday.yml  ldap.yml  routes.rb  schedule.rb  sns_apps.yml  sns_apps.yml.sample  spring.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: google_oauth2_installed.rb  omniauth.rb  omniauth_facebook_apps.yml  omniauth_twitter_apps.yml  plugins.rb  secret_token.rb  session_store.rb  simple_captcha.rb
config/locales/: action_view_ja.yml  active_record_ja.yml  active_support_ja.yml  translation_ja.yml
config/mecab/: mecabrc  zomeki.dic.original
config/rewrite/: base.conf  ssl.conf
config/rsync/: public_exclude.lst  public_include.lst
config/samples/: passenger.conf  reload_httpd.sh  root_cron.txt  zomeki_logrotate
config/virtual-hosts/: zomeki.conf.sample
db/: schema.rb  seeds.rb
db/migrate/: 00000000000000_existing_20120215.rb  20120222130032_add_body_to_cms_sites.rb  20120302060328_create_public_bbs_boards.rb  20120312165046_create_public_bbs_categories.rb  20120313151826_create_public_bbs_threads.rb  20120314033907_create_cms_o_auth_users.rb  20120318145957_add_category_ids_to_public_bbs_threads.rb  20120319080405_create_public_bbs_responses.rb  20120324152141_add_event_data_to_portal_article_docs.rb  20120324171202_drop_public_bbs_boards.rb  20120325152959_add_portal_category_ids_to_public_bbs_threads.rb  20120325174631_add_nickname_and_url_to_cms_o_auth_users.rb  20120326153535_create_public_bbs_tags.rb  20120326162111_add_portal_group_id_to_public_bbs_threads.rb  20120327030511_add_portal_columns_to_public_bbs_responses.rb  20120419073708_add_portal_business_ids_to_public_bbs_threads.rb  20120423011121_add_portal_attribute_ids_to_public_bbs_threads.rb  20120423013510_add_portal_area_ids_to_public_bbs_threads.rb  20120423025053_add_portal_columns2_to_public_bbs_responses.rb  20120507152629_add_res_creation_to_public_bbs_threads.rb  20120525015812_add_category_ids_to_public_bbs_responses.rb  20120528070222_remove_portal_columns_from_public_bbs_responses.rb  20120609171843_add_site_image_id_to_cms_sites.rb  20120621064339_create_cms_site_belongings.rb  20120630163404_create_cms_site_basic_auth_users.rb  20120630164252_add_portal_group_state_to_cms_sites_and_portal_article_docs.rb  20120704140026_add_site_and_admin_creatable_to_sys_users.rb  20120722005121_replace_user_with_group_on_cms_site_belongings.rb  20121103165840_create_gp_article_docs.rb  20121105005847_create_gp_article_category_types.rb  20121105070855_create_gp_article_categories.rb  20121106061720_create_gp_article_categories_gp_article_docs_join_table.rb  20121130005515_add_note_to_cms_contents.rb  20121214032428_create_gp_category_category_types.rb  20121214080240_create_gp_category_categories.rb  20121218204444_create_gp_article_docs_gp_category_categories_join_table.rb  20121220210622_add_href_target_subtitle_and_summary_to_gp_article_docs.rb  20121224023135_add_name_to_gp_article_docs.rb  20121224133959_add_published_at_to_gp_article_docs.rb  20130105014441_add_extra_value_to_cms_content_settings.rb  (+178 more)
db/seeds/: base.rb
doc/: CHANGES.txt  INSTALL.txt  INSTALL_centos.txt  INSTALL_ubuntu.txt
doc/install_scripts/: configure_zomeki.rb  install_apache.rb  install_cron.sh  install_mysql.rb  install_ruby.sh  install_zomeki.sh  install_zomeki_kana_read.sh  prepare.sh  start_servers.sh
doc/install_zomeki/: install_zomeki01.sh  install_zomeki02.sh  install_zomeki03.sh  to_utf8.sh
ext/: gtalk_filter.rb
ext/config/: chasenrc_gtalk  chasenrc_ruby
ext/gtalk/: Changelog  License  MODIFY_F0  Makefile.in  README  RUN  accent.c  accent.h  chaone.c  chaone.cpp  chaone.h  chasen.c  chasen_lib.c  chasenrc  chasenrc-win  command.h  configure  configure.in  confpara.h  da.h  defaults.h  dic.c  do_output.c  do_output_sp.c  do_synthesis.c  fileIO.c  getline.c  gtalk-eucjp.dic  gtalk-sjis.dic  gtalk.dep  gtalk.dsp  gtalk.dsw  gtalk.mak  hmmsynth.c  hmmsynth.h  main.c  make_aphrase.c  make_breath.c  make_duration.c  make_mora.c  (+37 more)
ext/gtalk/data/: sentence1  sentence1-sjis  sentence1-sjis.data  sentence1.data  sentence2  sentence2-sjis  sentence2-sjis.data  sentence2.data
ext/morph/chaone/: AUTHORS  COPYING  ChangeLog  FPAfn.xml  IPAfn.xml  Makefile.am  Makefile.in  accent.xsl  accent_rule.xml  ap_rule.xml  chaone.c  chaone.xsl  chaone4gtalk_win.xsl  chunk_rules.xml  chunker.xsl  configure  configure.ac  ea_symbol_table.xml  kannjiyomi.xml  license.txt  phonetic.xsl  pos_sys.xml  postp.xsl  prep.xsl
lib/: core.rb  page.rb  script.rb  zomeki.rb
lib/plugins/: init.rb
lib/tasks/: article.rake  cms.rake  gp_article.rake  gp_calendar.rake  gp_category.rake  maintenance.rake  newsletter.rake  rank.rake  seed.rake  survey.rake  sys.rake
lib/tool/: convert.rb
lib/util/: accessibility_checker.rb  config.rb  convert.rb  file.rb  link_checker.rb  qrcode.rb  sequencer.rb
public/: .htaccess.sample
spec/: spec_helper.rb
spec/factories/: ad_banner_banners.rb  ad_banner_content_banners.rb  ad_banner_groups.rb  approval_approval_flows.rb  approval_approval_request.rb  approval_approval_request_histories.rb  approval_approvals.rb  approval_assignments.rb  approval_content_approval_flows.rb  cms_contents.rb  cms_o_auth_users.rb  cms_site_belongings.rb  cms_sites.rb  gp_article_comments.rb  gp_article_links.rb  gp_category_template_modules.rb  gp_category_templates.rb  organization_groups.rb  public_bbs_categories.rb  public_bbs_responses.rb  public_bbs_threads.rb  sns_share_accounts.rb  sns_share_content_accounts.rb  survey_answers.rb  survey_content_forms.rb  survey_form_answers.rb  survey_forms.rb  survey_questions.rb  sys_groups.rb  sys_users.rb  (+1 more)
(+2439 files in other folders)
