dnl $Id: configure.in,v 1.6 2009/02/13 02:02:47 sako Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(gtalk, 1.5, galateatalk-dev@lists.sourceforge.jp)

dnl install-sh will be searched (and found) here
AC_CONFIG_AUX_DIR(config)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP

AC_PATH_PROG(RM, rm)
AC_PATH_PROG(TAR, tar)
AC_PATH_PROG(GZIP, gzip)

dnl Check the system name
AC_CANONICAL_HOST

dnl Checks for libraries.
AC_CHECK_LIB(m, log,
		have_libm=1; LIBS="-lm ${LIBS}",
		AC_MSG_ERROR( [libm not found]))

if test "x$GCC = xyes"; then
     CFLAGS="-Wall -O2"
fi


AC_ARG_ENABLE(debug,
[  --enable-debug          Turn on debug mode (default=no)],
[ if test "x$enable_debug" = "xyes"; then
     AC_DEFINE(DEBUG)
     AC_DEFINE(KETSUGO_DEBUG)
     CFLAGS="$CFLAGS -g"
fi])

use_da=yes
AC_ARG_ENABLE(da,
[  --enable-da             Use audio output (default=yes)],
[ if test "$enable_da" = "no"; then
    use_da=no
fi])

if test "$use_da" = "yes"; then
  AC_MSG_CHECKING([audio device])
  case $host in
      *-solaris*)
	AC_MSG_RESULT([[solaris]])
      	AC_CHECK_HEADER([sys/audioio.h], [AC_DEFINE(SOLARIS)], [AC_MSG_ERROR([sys/audioio.h is not found])])
	;;
      *-linux*)
	AC_MSG_RESULT([[linux]])
	AC_CHECK_FILE([/usr/include/sys/soundcard.h], [AC_DEFINE(LINUX)],
	  [AC_MSG_ERROR([sys/soundcard.h is not found])])
dnl	AC_CHECK_HEADER([sys/soundcard.h], [AC_DEFINE(LINUX)],
dnl	  [AC_MSG_ERROR([sys/soundcard.h is not found])])
	;;
      *)
	AC_MSG_WARN([[not found]])
	;;
  esac	
fi

dnl Check option
AC_ARG_ENABLE(threadda,
[  --enable-threadda       Use Thread DA (default=no)],
[ if test "x$enable_threadda" = "xyes" -a "$use_da" = "yes"; then
     AC_DEFINE(THREAD_DA)
     AC_CHECK_LIB(pthread, pthrad_create)
fi])

dnl Check option
AC_CHECK_LIB(pthread,pthread_create,have_pthread=1,have_pthread=0)
if test $have_pthread = 1 -a "$use_da" = "yes"; then
	AC_DEFINE(AUTO_DA)
	LIBS="$LIBS -lpthread -ldl"
fi

dnl check byte order
AC_C_BIGENDIAN()
if test "x${ac_cv_c_bigendian}" = "xno"; then
   AC_DEFINE(WORDS_LITTLEENDIAN)
fi
		   
dnl check for readline library
have_readline=no
AC_CHECK_HEADER(readline/readline.h,
    AC_CHECK_LIB(readline, readline,
	   have_readline=yes
	   LIBS="$LIBS -lreadline",
	AC_MSG_CHECKING([for readline in -lreadline with -ltermcap])
	ac_save_LIBS="$LIBS"
	LIBS="$ac_save_LIBS -lreadline -ltermcap"
	AC_TRY_LINK([#include <stdio.h>
#include <readline/readline.h>],[readline("");],
	    AC_MSG_RESULT("yes")
	    have_readline=yes,
	  AC_MSG_RESULT("no")
	  AC_MSG_CHECKING([for readline in -lreadline with -lncurses])
	  LIBS="$ac_save_LIBS -lreadline -lncurses"
	  AC_TRY_LINK([#include <stdio.h>
#include <readline/readline.h>],[readline("");],
	      AC_MSG_RESULT("yes")
	      have_readline=yes,
	    AC_MSG_RESULT("no")
	    LIBS="$ac_save_LIBS"
	  )
	)
    )
)
if test $have_readline = yes; then
    AC_DEFINE(HAVE_READLINE)
    dnl check some definition
    AC_MSG_CHECKING([for readline verion > 4.1])
    AC_EGREP_HEADER(rl_compentry_func_t, readline/readline.h,
	AC_MSG_RESULT([yes]),
      AC_MSG_RESULT([no - use old func])
      AC_DEFINE(HAVE_READLINE_4_1_OLDER)
    )
fi

dnl check splib
use_splib=no

AC_ARG_ENABLE(splib,
[  --enable-splib          Use spLib (default=no)],
[ if test "$enable_splib" = "yes"; then
   use_splib=yes
fi])

if test "$use_splib" = "yes"; then
   AC_ARG_WITH( splib-inc,
    [  --with-splib-inc=DIR    location for splib headers],
    [CFLAGS="-I${withval} ${CFLAGS}"])
    
   AC_ARG_WITH( splib-lib,
    [  --with-splib-lib=DIR    location for splib lib],
    LDFLAGS="-L${withval} ${LDFLAGS}")

    AC_CHECK_HEADER( sp/spBaseLib.h,
		     [],
		     AC_MSG_ERROR( [splib header not found]))

    AC_CHECK_HEADER( sp/spAudioLib.h,
		     [],
		     AC_MSG_ERROR( [splib header not found]))

    AC_CHECK_LIB( spb.linux-glibc ,spDebug,
		   have_libspb=1; LIBS="-lspa.linux-glibc ${LIBS}",
		   AC_MSG_ERROR( [spBase library not found]),
		   -lm)
    
    AC_CHECK_LIB( spa.linux-glibc ,spInitAudioDriver,
		   have_libspa=1; LIBS="${LIBS} -lspb.linux-glibc ${LIBS}",
		   AC_MSG_ERROR( [spAudio library not found]),
		   -lm -lspb.linux-glibc -lpthread -ldl)

    AC_DEFINE( USE_SPLIB)		   
fi
	     
dnl check chasenlib

use_chasenlib=no
AC_ARG_ENABLE( chasenlib,
 [  --enable-chasenlib      Use chasenlib],
 [ if test "$enable_chasenlib" = "yes"; then
    use_chasenlib=yes
fi])

if test "$use_chasenlib" = "yes"; then
   AC_ARG_WITH( chasen-config,
 [  --with-chasen-config    set chasen-config location [search path]],
   AC_MSG_RESULT( using $with_chasen_config for chasen-config)
 CHASEN_CONFIG=$with_chasen_config,
 [AC_PATH_PROGS( CHASEN_CONFIG, chasen-config, no)])

dnl without chasen-config
 if test "$CHASEN_CONFIG" = "no"; then
   AC_ARG_WITH( chasen-inc,
 [  --with-chasen-inc=DIR   location for libchasen headers],
 [CFLAGS="-I${withval} ${CFLAGS}"])

   AC_ARG_WITH( chasen-lib,
 [  --with-chasen-lib=DIR   location for libchasen library],
 [LDFLAGS="-L${withval} ${LDFLAGS}"])
dnl with chasen-config 

 else
     CFLAGS="`$CHASEN_CONFIG --cflags` ${CFLAGS}"
     LDFLAGS="`$CHASEN_CONFIG --libs` ${LDFLAGS}"
 fi

 AC_CHECK_LIB( stdc++, main,
   LIBS="-lstdc++ ${LIBS}",
   AC_MSG_ERROR( [libstdc++ not found]))
 
 AC_CHECK_HEADER( chasen.h,
  [],
  AC_MSG_ERROR( [chasen.h not found]))

 AC_CHECK_LIB( chasen, chasen_sparse,
  LIBS="-lchasen ${LIBS}",
  AC_MSG_ERROR( [chasenlib not found]))

 AC_DEFINE( USE_CHASENLIB)

dnl check version 
 CHASEN_VERSION=`$CHASEN_CONFIG --version`
 echo -n "checking for chasen-version (= 2.3.3) ... "
 if test "$CHASEN_VERSION" = "2.3.3"; then
    echo "yes"
 else
    echo "no"
    AC_MSG_ERROR( [chasen version missmach])
 fi

fi

dnl check chaone(depend on xml/xlst)
use_chaone=no
AC_ARG_ENABLE( chaone,
 [  --enable-chaone         Use chaone],
 [ if test "$enable_chaone" = "yes"; then
    use_chaone=yes
fi])

dnl check libxml2/libxslt
if test "$use_chaone" = "yes"; then
   AC_ARG_WITH( libxml2-config,
     [  --with-xml2-config      set xml2-config location [search path]],
     AC_MSG_RESULT( using $with_xml2_config for xml2-config)
     XML2_CONFIG=$with_xml2_config,
     [AC_PATH_PROGS( XML2_CONFIG, xml2-config, no)])
	    
   if test "$XML2_CONFIG" = "no"; then
      AC_ARG_WITH( libxml2-inc,
       [  --with-libxml2-inc=DIR  location for libxml2 headers],
        [CFLAGS="-I${withval} ${CFLAGS}"])

      AC_ARG_WITH( libxml2-lib,
       [  --with-libxml2-lib=DIR  location for libxml2 library],
       [LDFLAGS="-L${withval} ${LDFLAGS}"
       LIBS="-lxml2 ${LIBS}"])
   else
     CFLAGS_="`$XML2_CONFIG --cflags` ${CFLAGS}"
     LDFLAGS_="`$XML2_CONFIG --libs` ${CFLAGS}"
   fi

   AC_CHECK_LIB( xml2, xmlMalloc,have_libxml2=1,AC_MSG_ERROR(libxml2 not found))

   AC_ARG_WITH( xslt-config,
     [  --with-xslt-config      set xslt-config location [search path]],
     AC_MSG_RESULT( using $with_xslt_config for xslt-config)
     XSLT_CONFIG=$with_xslt_config,
    [AC_PATH_PROGS( XSLT_CONFIG, xslt-config, no)])

   if test "$XSLT_CONFIG" = "no"; then
      AC_ARG_WITH( libxlst-inc,
       [  --with-libxlst-inc=DIR  location for libxlst headers],
        [CFLAGS="-I${withval} ${CFLAGS}"])

      AC_ARG_WITH( libxlst-lib,
      [  --with-libxlst-lib=DIR  location for libxlst library],
       [LDFLAGS="-L${withval} ${LDFLAGS}";
       LIBS="-lxslt ${LIBS}"])
   else
     CFLAGS="`$XSLT_CONFIG --cflags` ${CFLAGS}"
     LDFLAGS="`$XSLT_CONFIG --libs` ${LDFLAGS}"
   fi
dnl   AC_LANG_CPLUSPLUS
dnl   AC_CHECK_HEADERS( transform.h xsltutils.h exslt.h)

   AC_CHECK_LIB( xslt, xsltText,
		 have_libxslt=1,
		 AC_MSG_ERROR(libxslt not found))

   AC_CHECK_LIB( exslt, exsltStrRegister,
		have_libexslt=1; LIBS="${LIBS} -lexslt",
		AC_MSG_ERROR(libexslt not found))
fi

AC_OUTPUT(Makefile)
